<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menuSensorText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/home" />
                <item
                    android:id="@+id/accelerometer"
                    android:icon="@drawable/ic_acceleration_white"
                    android:title="@string/sensorAccelerometer" />
                <item
                    android:id="@+id/magneticField"
                    android:icon="@drawable/ic_magnet_white"
                    android:title="@string/sensorMagneticField" />
                <item
                    android:id="@+id/gravity"
                    android:icon="@drawable/ic_gravity_white"
                    android:title="@string/sensorGravity" />
                <item
                    android:id="@+id/gyroscope"
                    android:icon="@drawable/ic_gyroscope_white"
                    android:title="@string/sensorGyroscope" />
                <item
                    android:id="@+id/linearAcceleration"
                    android:icon="@drawable/ic_linearacceleration_white"
                    android:title="@string/sensorLinearAcceleration" />
                <item
                    android:id="@+id/ambient_Temperature"
                    android:icon="@drawable/ic_temperature_white"
                    android:title="@string/sensorAmbientTemperature" />
                <item
                    android:id="@+id/light"
                    android:icon="@drawable/ic_light_white"
                    android:title="@string/sensorLight" />
                <item
                    android:id="@+id/pressure"
                    android:icon="@drawable/ic_pressure_white"
                    android:title="@string/sensorPressure" />
                <item
                    android:id="@+id/relativeHumidity"
                    android:icon="@drawable/ic_humidity_white"
                    android:title="@string/sensorRelativeHumidity" />
                <item
                    android:id="@+id/geomagneticRotationVector"
                    android:icon="@drawable/ic_rotate_white"
                    android:title="@string/sensorGeomagneticRotationVector" />
                <item
                    android:id="@+id/proximity"
                    android:icon="@drawable/ic_proximity_white"
                    android:title="@string/sensorProximity" />
                <item
                    android:id="@+id/stepCounter"
                    android:icon="@drawable/ic_steps_white"
                    android:title="@string/sensorStepCounter" />
            </group>
        </menu>
    </item>
</menu>


