<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="detailModel"
            type="com.graytsar.sensorapp.ModelDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/xValDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.xValue}"
            android:theme="@style/text_sensor_normal_style"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yValDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.yValue}"
            android:theme="@style/text_sensor_normal_style"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/xValDetail" />

        <TextView
            android:id="@+id/zValDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.zValue}"
            android:theme="@style/text_sensor_normal_style"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yValDetail" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zValDetail" />

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/icon"
            android:theme="@style/icon_detail_normal_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart"
            app:srcCompat="@drawable/ic_perm_device_information_black_24dp" />

        <TextView
            android:id="@+id/title_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@string/details"
            android:theme="@style/text_detail_header_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageDetail"
            app:layout_constraintTop_toBottomOf="@+id/chart" />

        <TextView
            android:id="@+id/sensor_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.name}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

        <TextView
            android:id="@+id/sensor_text_vendor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.vendor}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_name" />

        <TextView
            android:id="@+id/sensor_text_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.version}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_vendor" />

        <TextView
            android:id="@+id/sensor_text_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.power}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_version" />

        <TextView
            android:id="@+id/sensor_text_max_delay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.maxDelay}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_power" />

        <TextView
            android:id="@+id/sensor_text_min_delay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.minDelay}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_max_delay" />

        <TextView
            android:id="@+id/sensor_text_max_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@{detailModel.maxRange}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_min_delay" />

        <ImageView
            android:id="@+id/imageInformation"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/icon"
            android:theme="@style/icon_detail_normal_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_max_range"
            app:srcCompat="@drawable/ic_info_outline_black_24dp" />

        <TextView
            android:id="@+id/title_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_text_horizontal"
            android:text="@string/information"
            android:theme="@style/text_detail_header_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageInformation"
            app:layout_constraintTop_toBottomOf="@+id/sensor_text_max_range" />

        <TextView
            android:id="@+id/sensor_text_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_horizontal"
            android:layout_marginTop="@dimen/margin_text_vertical"
            android:layout_marginEnd="@dimen/margin_text_vertical"
            android:layout_marginBottom="@dimen/margin_text_horizontal"
            android:text="@{detailModel.information}"
            android:theme="@style/text_detail_normal_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageInformation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>